@@ -1,5 +1,5 @@
 /* insertion.h -- declarations for insertion.c.
-   $Id: insertion.h,v 1.6 2003-11-15 02:13:59 dirt Exp $
+   $Id: insertion.h,v 1.7 2003-11-18 22:20:58 karl Exp $
 
    Copyright (C) 1998, 1999, 2001, 2002, 2003 Free Software Foundation, Inc.
 
@@ -24,14 +24,15 @@
 enum insertion_type
 { 
   cartouche, copying, defcv, deffn, defivar, defmac, defmethod, defop,
-  defopt, defspec, deftp, deftypefn, deftypefun, deftypeivar,
+  defopt, defspec, deftp, deftypecv, deftypefn, deftypefun, deftypeivar,
   deftypemethod, deftypeop, deftypevar, deftypevr, defun, defvar, defvr,
   detailmenu, direntry, display, documentdescription, enumerate,
-  example, flushleft, flushright, format, ftable, group, ifclear, ifdocbook,
-  ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo, ifnotplaintext, ifnottex,
-  ifnotxml, ifplaintext, ifset, iftex, ifxml, itemize, lisp, menu, multitable,
-  quotation, rawhtml, rawtex, smalldisplay, smallexample, smallformat, smalllisp,
-  verbatim, table, tex, vtable, titlepage, bad_type
+  example, flushleft, flushright, format, ftable, group, ifclear,
+  ifdocbook, ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo,
+  ifnotplaintext, ifnottex, ifnotxml, ifplaintext, ifset, iftex, ifxml,
+  itemize, lisp, menu, multitable, quotation, rawhtml, rawtex,
+  smalldisplay, smallexample, smallformat, smalllisp, verbatim, table,
+  tex, vtable, titlepage, bad_type
 };
 
 typedef struct istack_elt
