@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.75 2003-11-17 21:36:33 dirt Exp $
+$Id: NEWS,v 1.76 2003-11-18 22:20:11 karl Exp $
 This file records noteworthy changes.
 
   Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
@@ -26,15 +26,17 @@ convenience, here's a url to one of the relevant sections:
   . new commands @docbook, @ifdocbook, @ifnotdocbook
       for conditional Docbook text.
   . new command @registeredsymbol for the r-in-a-circle symbol.
-  . new command @headitem to make a heading in @multitable.
-  . @quotation now accepts an optional parameter for labelling the text.
+  . new command @headitem to make a heading row in @multitable.
+  . new commands @deftypecv[x] for class variables in typed OO languages.
+  . @quotation now accepts an optional parameter for labelling the text
+      as a `Note', `Tip', etc.
 * makeinfo:
   . HTML output: include node name in <title> with split output;
       @multicolumn fractions become percentages;
       entities used for bullets, quotes, dashes, and others;
       accented dotless i supported.
   . XML output: new tags to preserve more source features.
-  . Docbook output: upgraded DTD to Docbook XML 4.2.
+  . Docbook output: upgraded DTD to Docbook XML 4.2, no longer using SGML.
       improved translation in general; for instance,
       line annotations and marked quotations.
 * texi2dvi:
